--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
-bcrypt==3.1.7
-cffi==1.14.0
-click==7.1.1
-dominate==2.5.1
-Flask==1.1.2
+bcrypt==3.1.3
+cffi==1.10.0
+click==6.7
+dominate==2.3.1
+Flask==0.12
 Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-psycopg2==2.8.5
-pycparser==2.20
-six==1.14.0
-SQLAlchemy==1.3.16
+flask-heroku==0.1.9
+Flask-Login==0.4.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.2
+Flask-WTF==0.14.2
+gunicorn==19.7.1
+itsdangerous==0.24
+Jinja2==2.9.5
+MarkupSafe==0.23
+psycopg2==2.6.2
+pycparser==2.17
+six==1.10.0
+SQLAlchemy==1.1.6
 visitor==0.1.3
-Werkzeug==1.0.1
-WTForms==2.2.1
+Werkzeug==0.11.15
+WTForms==2.1
